<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_menu_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_action_news"
            android:title="@string/action_news" />
    </group>


    <group android:id="@+id/nav_menu_2">

                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_city_attraction"
                        android:icon="@drawable/ic_action_attraction"
                        android:title="@string/city_attraction" />
                    <item
                        android:id="@+id/nav_city_institution"
                        android:icon="@drawable/ic_action_city_institution"
                        android:title="@string/action_city_institution" />
                    <item
                        android:id="@+id/nav_museums"
                        android:icon="@drawable/ic_action_historical_sight"
                        android:title="@string/action_museums" />
                </group>

    </group>

    <group android:id="@+id/nav_menu_3">

                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_hotel"
                        android:icon="@drawable/ic_action_hotel"
                        android:title="@string/action_hotel" />
                </group>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_restaurant"
                android:icon="@drawable/ic_action_restaurant"
                android:title="@string/action_restaurant" />
        </group>

    </group>




    <group android:id="@+id/nav_menu_4">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_event"
                android:icon="@drawable/ic_action_event"
                android:title="@string/action_event" />
        </group>

    </group>

    <group android:id="@+id/nav_menu_5">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_adventure"
                android:icon="@drawable/ic_adventure"
                android:title="@string/adventure_details" />
        </group>

    </group>


    <group android:id="@+id/nav_menu_6">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_liked"
                android:icon="@drawable/ic_liked"
                android:title="@string/action_liked" />
        </group>

    </group>




    <group
        android:id="@+id/nav_menu_7"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_action_weather"
            android:title="@string/action_weather"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_action_map"
            android:title="@string/action_map"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_info"
            android:title="@string/action_info"/>

    </group>
</menu>
